kubernetes/main/apps/selfhosted/tandoor/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tandoor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tandoor
  egress:
    # ingress-nginx (OIDC auth)
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: nginx-external
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
